# cellphone-barcode-scanner

./: .editorconfig  .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml
data/: serial_lookup.js
docs/project/: business_rules.md.example  conventions.md
scripts/transform/: build_serial_lookup.py
scripts/utils/: config_loader.py  logger.py
settings/: apply.md  apply.py  apply.yaml  config.yaml  credentials.env.example  credentials.py  datawork.py  git.py  git.yaml  paths.yaml  python_env.py  python_env.yaml  shared.py  verify.py  vscode.py  vscode.yaml
settings/addons/: README.md
